hdfs running in k8s, with service name of hdfs-service at port 9000

--- a/hdfs/Dockerfile
+++ b/hdfs/Dockerfile
@@ -1,6 +1,7 @@
 FROM instance-2:8080/openjdk:8-jdk
 USER root
-RUN cd /opt
+WORKDIR /opt
+RUN apt-get update -y && apt-get install vim net-tools telnet -y
 RUN curl -O http://instance-2:8081/repository/raw-artifacts/oss/hadoop-2.7.7.tar.gz
 RUN tar -xzf hadoop-2.7.7.tar.gz
 COPY hdfs-site.xml hadoop-2.7.7/etc/hadoop/hdfs-site.xml
@@ -9,3 +10,18 @@ COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 RUN hadoop-2.7.7/bin/hdfs namenode -format
 ENTRYPOINT ["sh", "-c", "/entrypoint.sh"]
+
+#Master namenode webui
+EXPOSE 50070
+#Namenode IPC
+EXPOSE 8020
+#Insecure webui
+EXPOSE 50075
+#Secure webui
+EXPOSE 50475
+#Datanode data transfer
+EXPOSE 50010
+#IPC between data nodes
+EXPOSE 50020
+#Secondary namenode connection
+EXPOSE 50090
