--- a/mysql/mysql-deploy.yaml
+++ b/mysql/mysql-deploy.yaml
@@ -2,7 +2,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: mysql-service
-  namespace: bsavoy
+  namespace: ${K8S_NAMESPACE}
 spec:
   type: ClusterIP
   selector:
@@ -16,7 +16,7 @@ kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
   name: mysql-deployment
-  namespace: bsavoy
+  namespace: ${K8S_NAMESPACE}
   labels:
     app: mysql
 spec:
