jenkins deployment working for mysql and hdfs, working on spark

--- a/spark/spark-deploy.yaml
+++ b/spark/spark-deploy.yaml
@@ -43,7 +43,7 @@ spec:
     spec:
       containers:
       - name: spark-og
-        image: instance-2:8080/spark:201812130
+        image: ${DOCKER_REGISTRY}/${IMAGE_NAME}:${BUILD_NUMBER}
         resources:
           limits:
             cpu: "1000m"
