--- a/hdfs/hdfs-deploy.yaml
+++ b/hdfs/hdfs-deploy.yaml
@@ -32,7 +32,7 @@ spec:
     spec:
       containers:
       - name: hdfs-og
-        image: instance-2:8080/hdfs:201812110
+        image: ${DOCKER_REGISTRY}/${IMAGE_NAME}:${BUILD_NUMBER}
         resources:
           limits:
             cpu: "1000m"
