--- a/mysql/mysql-deploy.yaml
+++ b/mysql/mysql-deploy.yaml
@@ -31,7 +31,7 @@ spec:
     spec:
       containers:
       - name: mysql-og
-        image: instance-2:8080/mysql:20181211.0
+        image: ${DOCKER_REGISTRY}/${IMAGE_NAME}:${BUILD_NUMBER}
         resources:
           limits:
             cpu: "1000m"
