--- a/hdfs/hdfs-deploy.yaml
+++ b/hdfs/hdfs-deploy.yaml
@@ -14,7 +14,7 @@ spec:
 kind: Service
 apiVersion: v1
 metadata:
-  name: hdfs-service
+  name: hdfs-ui-service
   namespace: ${K8S_NAMESPACE}
 spec:
   type: ClusterIP
