--- a/jupyter/jupyter-deploy.yaml
+++ b/jupyter/jupyter-deploy.yaml
@@ -11,7 +11,8 @@ spec:
   ports:
   - protocol: TCP
     port: 8888
-    targetPort: 30800
+    nodePort: 30909
+    targetPort: 8888
 ---
 kind: Deployment
 apiVersion: extensions/v1beta1
