--- a/spark/spark-cluster-deploy.yaml
+++ b/spark/spark-cluster-deploy.yaml
@@ -55,7 +55,7 @@ spec:
 kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
-  name: spark-worker-deployment-${SPARK_MASTER_URL}
+  name: spark-worker-${SPARK_MASTER_URL}
   namespace: ${K8S_NAMESPACE}
   labels:
     app: spark-worker-${SPARK_MASTER_URL}
