update names and such

--- a/spark/spark-cluster-deploy.yaml
+++ b/spark/spark-cluster-deploy.yaml
@@ -1,7 +1,7 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: spark-master-${SPARK_MASTER_URL}
+  name: ${SPARK_MASTER_URL}-spark-master
   namespace: ${K8S_NAMESPACE}
 spec:
   type: NodePort
@@ -10,19 +10,21 @@ spec:
   ports:
   - protocol: TCP
     port: 7077
+    nodePort: 30707
 ---
 kind: Service
 apiVersion: v1
 metadata:
-  name: spark-ui-${SPARK_MASTER_URL}
+  name: ${SPARK_MASTER_URL}-spark-ui
   namespace: ${K8S_NAMESPACE}
 spec:
   type: NodePort
   selector:
-    app: spark-master-${SPARK_MASTER_URL}
+    app: ${SPARK_MASTER_URL}-spark-master
   ports:
   - protocol: TCP
     port: 8080
+    nodePort: 30888
 ---
 kind: Deployment
 apiVersion: extensions/v1beta1
@@ -55,7 +57,7 @@ spec:
 kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
-  name: spark-worker-${SPARK_MASTER_URL}
+  name: ${SPARK_MASTER_URL}-spark-worker
   namespace: ${K8S_NAMESPACE}
   labels:
     app: spark-worker-${SPARK_MASTER_URL}
