--- a/spark/spark-cluster-deploy.yaml
+++ b/spark/spark-cluster-deploy.yaml
@@ -46,6 +46,7 @@ spec:
       containers:
       - name: spark-master-${SPARK_MASTER_URL}
         image: ${DOCKER_REGISTRY}/${MASTER_IMAGE_NAME}:${BUILD_NUMBER}
+        env:
         - name: PYSPARK_PYTHON
           value: "python3"
         - name: PYSPARK_DRIVER_PYTHON
