--- a/hdfs/hdfs-deploy.yaml
+++ b/hdfs/hdfs-deploy.yaml
@@ -4,12 +4,13 @@ metadata:
   name: hdfs-service
   namespace: ${K8S_NAMESPACE}
 spec:
-  type: ClusterIP
+  type: nodePort
   selector:
     app: hdfs
   ports:
   - protocol: TCP
     port: 9000
+    nodePort: 30900
 ---
 kind: Service
 apiVersion: v1
