--- a/spark/spark-cluster-deploy.yaml
+++ b/spark/spark-cluster-deploy.yaml
@@ -32,7 +32,7 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: spark-master-${SPARK_MASTER_URL}
+    app: spark-worker-${SPARK_MASTER_URL}
   ports:
   - protocol: TCP
     port: 4040
