first attempt at matching executor resource limits to container shape

--- a/spark/spark-cluster-deploy.yaml
+++ b/spark/spark-cluster-deploy.yaml
@@ -97,10 +97,11 @@ spec:
           value: "python3"
         - name: PYSPARK_DRIVER_PYTHON
           value: "python3"
+        - name: SPARK_WORKER_MEMORY
+          value: "${WORKER_SHAPE_MEM}"
+        - name: SPARK_WORKER_CORES
+          value: "${WORKER_SHAPE_CPU}"
         resources:
           limits:
-            cpu: "1000m"
-            memory: "2048Mi"
-          requests:
-            cpu: "500m"
-            memory: "1024Mi"
+            cpu: "${WORKER_SHAPE_CPU}000m"
+            memory: "${WORKER_SHAPE_MEM}Mi"
