--- a/bsavoy-hlservice.yaml
+++ b/bsavoy-hlservice.yaml
@@ -2,9 +2,12 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: bsavoy
-  namespace: bsavoy
+  name: default-subdomain
 spec:
   clusterIP: None
+  ports:
+  - protocol: TCP
+    port: 8081
+    targetPort: 8081
   selector:
     app: spark-worker-spark-cluster-01
