--- a/spark/spark-rbac.yaml
+++ b/spark/spark-rbac.yaml
@@ -5,7 +5,7 @@ metadata:
   name: spark-pod-mgr
 rules:
 - apiGroups: [""] # "" indicates the core API group
-  resources: ["pods"]
+  resources: ["*"]
   verbs: ["get", "watch", "list", "delete", "create", "edit"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
