--- a/spark/spark-job.yaml
+++ b/spark/spark-job.yaml
@@ -2,6 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: spark-job-${JOB_NAME}-${BUILD_NUMBER}
+  namespace: ${K8S_NAMESPACE}
 spec:
   template:
     spec:
