--- a/spark/spark-rbac.yaml
+++ b/spark/spark-rbac.yaml
@@ -1,7 +1,7 @@
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  namespace: default
+  namespace: bsavoy
   name: spark-pod-mgr
 rules:
 - apiGroups: [""] # "" indicates the core API group
@@ -12,7 +12,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: spark-admin-binding
-  namespace: default
+  namespace: bsavoy
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
