--- a/streamsets/sdc-deploy.yaml
+++ b/streamsets/sdc-deploy.yaml
@@ -32,7 +32,7 @@ spec:
     spec:
       containers:
       - name: sdc-og
-        image: instance-2:8080/sdc:201812140
+        image: ${DOCKER_REGISTRY}/${IMAGE_NAME}:${BUILD_NUMBER}
         volumeMounts:
         - name: sdc-data
           mountPath: /data
