update bootstrap script. First successful run. First pass at creating docker registry credentials. HDFS needs to point to proper artifact repo

--- a/hdfs/Dockerfile
+++ b/hdfs/Dockerfile
@@ -2,7 +2,7 @@ FROM instance-1.us-east1-b.c.sandbox-224519.internal:8080/openjdk:8-jdk
 USER root
 WORKDIR /opt
 RUN apt-get update -y && apt-get install vim net-tools telnet -y
-RUN curl -O http://instance-2:8081/repository/raw-artifacts/oss/hadoop-2.7.7.tar.gz
+RUN curl -O http://instance-1.us-east1-b.c.sandbox-224519.internal:8081/repository/raw-artifacts/oss/hadoop-2.7.7.tar.gz
 RUN tar -xzf hadoop-2.7.7.tar.gz
 COPY hdfs-site.xml hadoop-2.7.7/etc/hadoop/hdfs-site.xml
 COPY core-site.xml hadoop-2.7.7/etc/hadoop/core-site.xml
