--- a/spark/spark-job.yaml
+++ b/spark/spark-job.yaml
@@ -14,3 +14,27 @@ spec:
           value: "${SUBMIT_PARAMS}"
       restartPolicy: Never
   backoffLimit: 0
+---
+kind: Role
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  namespace: ${K8S_NAMESPACE}
+  name: spark-pod-mgr
+rules:
+- apiGroups: ["","batch"] # "" indicates the core API group
+  resources: ["*"]
+  verbs: ["get", "watch", "list", "delete", "create", "edit"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: spark-admin-binding
+  namespace: ${K8S_NAMESPACE}
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: spark-pod-mgr
+subjects:
+- kind: ServiceAccount
+  name: default
+  namespace: ${K8S_NAMESPACE}
