--- a/spark/spark-rbac.yaml
+++ b/spark/spark-rbac.yaml
@@ -1,7 +1,7 @@
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  namespace: ${K8S_NAMESPACE}
+  namespace: $K8S_NAMESPACE
   name: spark-pod-mgr
 rules:
 - apiGroups: ["","batch"] # "" indicates the core API group
@@ -12,7 +12,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: spark-admin-binding
-  namespace: ${K8S_NAMESPACE}
+  namespace: $K8S_NAMESPACE
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -20,4 +20,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: default
-  namespace: ${K8S_NAMESPACE}
+  namespace: $K8S_NAMESPACE
