Update docker version to allow for parameterized dockerfiles. Update dockerfiles to include parameters for artifacts and docker registries, as well as default values for these parameters

--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -1,1 +1,2 @@
-FROM jupyter/all-spark-notebook
+ARG DOCKER_REGISTRY=instance-1.us-east1-b.c.sandbox-224519.internal:8080
+FROM ${DOCKER_REGISTRY}/jupyter/all-spark-notebook
