--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,4 +1,5 @@
-FROM centos:7
+ARG DOCKER_REGISTRY=instance-1.us-east1-b.c.sandbox-224519.internal:8080
+FROM ${DOCKER_REGISTRY}/centos:7
 USER root
 WORKDIR /opt
 RUN yum install wget -y
