--- a/spark/submitPod/Dockerfile
+++ b/spark/submitPod/Dockerfile
@@ -1,4 +1,5 @@
-FROM instance-1.us-east1-b.c.sandbox-224519.internal:8080/explorepod:201812262
+ARG DOCKER_REGISTRY=instance-1.us-east1-b.c.sandbox-224519.internal:8080
+FROM ${DOCKER_REGISTRY}/explorepod:201812262
 WORKDIR /
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
