--- a/streamsets/sdc-deploy.yaml
+++ b/streamsets/sdc-deploy.yaml
@@ -2,7 +2,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: sdc-service
-  namespace: bsavoy
+  namespace: ${K8S_NAMESPACE}
 spec:
   type: NodePort
   selector:
@@ -17,7 +17,7 @@ kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
   name: sdc-deployment
-  namespace: bsavoy
+  namespace: ${K8S_NAMESPACE}
   labels:
     app: sdc
 spec:
@@ -52,14 +52,14 @@ kind: PersistentVolume
 apiVersion: v1
 metadata:
   name: sdc-data-pv
-  namespace: bsavoy
+  namespace: ${K8S_NAMESPACE}
 spec:
   capacity:
     storage: 1Gi
   accessModes:
     - ReadWriteMany
   claimRef:
-    namespace: bsavoy
+    namespace: ${K8S_NAMESPACE}
     name: sdc-data-pvc
   hostPath:
    path: /k8s-pvs/sdc_data
@@ -69,7 +69,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: sdc-data-pvc
-  namespace: bsavoy
+  namespace: ${K8S_NAMESPACE}
 spec:
   accessModes:
     - ReadWriteMany
