First pass at auto provisioning nexus as well as base artifacts. Continue refactoring jenkins jobs to use new artifact URLs

--- a/spark/submitPod/Dockerfile
+++ b/spark/submitPod/Dockerfile
@@ -1,5 +1,6 @@
 ARG DOCKER_REGISTRY=instance-1.us-east1-b.c.sandbox-224519.internal:8080
-FROM ${DOCKER_REGISTRY}/explorepod:201812262
+ARG BASE_IMAGE=explorepod:latest
+FROM ${DOCKER_REGISTRY}/BASE_IMAGE
 WORKDIR /
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
