--- a/jenkins/config.json
+++ b/jenkins/config.json
@@ -1,7 +1,10 @@
 {
-        "auths": {
-                "instance-1.us-east1-b.c.sandbox-224519.internal:8080": {
-                        "auth": "ZG9ja2VyOjdxZWhuUnYzN24="
-                }
-        }
+	"auths": {
+		"instance-3.northamerica-northeast1-a.c.sandbox-224519.internal:30880": {
+			"auth": "ZG9ja2VyOmRvY2tlcnBhc3M="
+		}
+	},
+	"HttpHeaders": {
+		"User-Agent": "Docker-Client/18.09.0 (linux)"
+	}
 }
