--- a/spark/spark-job.yaml
+++ b/spark/spark-job.yaml
@@ -9,6 +9,8 @@ spec:
       containers:
       - name: spark-submitter-${JOB_NAME}-${BUILD_NUMBER}
         image: ${SUBMIT_POD_IMAGE}
+        imagePullSecrets:
+        - name: regcred
         env:
         - name: SPARK_SUBMIT_ARGS
           value: "${SUBMIT_PARAMS}"
