bootstrap substitution in jenkins jobs still needs work. Fixing submit pod build failures

--- a/jenkins/jenkins-deploy.yaml
+++ b/jenkins/jenkins-deploy.yaml
@@ -48,13 +48,13 @@ spec:
         - name: dockerconfigsecret
           mountPath: /home/.docker
           readOnly: true
-        resources:
-          limits:
-            cpu: "2000m"
-            memory: "4096Mi"
-          requests:
-            cpu: "2000m"
-            memory: "2048Mi"
+#        resources:
+#          limits:
+#            cpu: "2000m"
+#            memory: "4096Mi"
+#          requests:
+#            cpu: "2000m"
+#            memory: "2048Mi"
       volumes:
       - name: jenkins-home
         persistentVolumeClaim:
